# aegis-smoke

./: Cargo.toml  README.md  aegis-contract.md  aegis-intent.md  aegis-target.toml
src/: harness.rs  lib.rs
tests/: integration.rs
