[package]
name = "aegis-example-transfer"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false
description = "Phase 0 toy crate: deliberately broken transfer fn driven through the Aegis loop."

[lib]
path = "src/lib.rs"

# Kani injects its own `kani` crate into the build when invoked via
# `cargo kani`, so we don't add it as a regular dependency. The harness lives
# in src/harness.rs and is gated by `#[cfg(kani)]`.
